<resources>
    <string name="app_name">AfriNote</string>
    <string name="the_app_name">AfriNote</string>
    <string name="welcome">Welcome to AfriBook </string>
    <string name="button1">Continue</string>
    <string name="powered">powered by AfricLite</string>
    <string name="aboutAfricNote">This is a product of AfricLite to help in instant note keeping.</string>
    <string name="contactUs">
        <a href="africlite@gmail.com">africlite@gmail.com</a>
    </string>
    <string name="viewBook">View Notes</string>
    <string name="addBooks">Add Notes</string>
    <string name="feelFreeToContact">feel free to contact us</string>
    <string name="sN">Add groceries to buy in market e.g: rice,oil,spices,biscuit etc.</string>
    <string name="title">Add what to do tomorrow e.g: Gym,running,club,etc. </string>
    <string name="author">Add what to study today e.g: Java,Javascript,Commerce,Agriculture,Mathematics etc.</string>
    <string name="comment">Add other things</string>
    <string name="content">Add other things</string>
    <string name="add">Add</string>
    <string name="addNewBook">Add new note</string>
    <string name="delete">Delete all notes</string>
    <string name="email1">email:</string>
    <string name="password1">password</string>
    <string name="register_first1">Register First</string>
    <string name="back">Back</string>
    <string name="verify">Verify</string>
    <!--    Login items-->
    <string name="loginUsing">or login using</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="forgetpassword">forget password</string>
    <string name="neednewaccount">Need new account</string>
    <string name="alreadyhaveaccount">Already have account</string>
    <string name="createAccount">Create account</string>
    <string name="phoneNo">Phone no</string>
    <string name="enterVeriCode">Enter verification code here</string>
    <string name="sendVerificationCode">Send Code</string>

    <!--    Reset details-->
    <string name="clickToReset">Click to reset</string>
    <string name="noteAboutReset">note:your reset will commence once you click the button above</string>


    <!--    Items delete button-->
    <string name="deleteItem1">Delete item1</string>
    <string name="deleteItem2">Delete item2</string>
    <string name="deleteItem3">Delete item3</string>
    <string name="deleteItem4">Delete item4</string>
    <string name="deleteItem5">Delete item5</string>


<!--    Edit note section-->
    <string name="editButton">Click to edit note</string>
    <string name="saveChange">Save Changes</string>
</resources>

<!--Copyrighted AfricLite group Founder CreativeJerry-->