<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Contact">

    <include
        android:id="@+id/contact_layout"
        layout="@layout/app_layout">

    </include>

    <ImageView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_below="@id/contact_layout"
        android:text="@string/feelFreeToContact"
        android:contentDescription="@string/app_name"
        android:background="@drawable/note2"/>

    <TextView
        android:id="@+id/contactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:typeface="serif"
        android:background="#fff"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="sans-serif-thin"
        android:padding="12dp"
        android:text="@string/contactUs"
        android:textSize="14sp"/>

</RelativeLayout>