<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/email1"
            android:fontFamily="sans-serif-thin"
            android:inputType="textEmailAddress"
            android:paddingBottom="30dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:layout_marginTop="150dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            tools:targetApi="o"
            android:importantForAutofill="no"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email"
            android:layout_alignParentStart="true"
            android:autofillHints=""
            android:fontFamily="sans-serif-thin"
            android:paddingBottom="30dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            tools:targetApi="o"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginStart="180dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:text="@string/forgetpassword"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:targetApi="o"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/need_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="23dp"
            android:clickable="false"
            android:focusable="false"
            android:typeface="serif"
            android:fontFamily="sans-serif"
            android:text="@string/neednewaccount"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
            tools:targetApi="o"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="23dp" />

        <TextView
            android:id="@+id/login_using"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/need_new_account"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="23dp"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="sans-serif-thin"
            android:text="@string/loginUsing"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="normal"
            tools:targetApi="o"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="23dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/forget_password_link"
            android:layout_marginTop="0dp"
            android:background="@drawable/text_design5"
            android:padding="1dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/login"
            android:fontFamily="sans-serif"
            android:typeface="serif"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/phone_login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_using"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/text_design5"
            android:padding="1dp"
            android:typeface="serif"
            android:fontFamily="sans-serif"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />


    </RelativeLayout>
</ScrollView>