<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColor2"
    tools:context=".ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/resetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/text_design3"
            android:padding="14dp"
            android:textColor="#fff"
            android:textColorHint="#333"
            android:hint="@string/email1"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_design5"
            android:text="@string/clickToReset"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:textSize="17sp"
            android:typeface="serif"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteAboutReset"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#eee"
            android:textAlignment="center"
            android:textSize="15sp" />


    </LinearLayout>

</ScrollView>