<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBook">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/add_book_toolbar"
                layout="@layout/app_layout">
            </include>


            <EditText
                android:id="@+id/edititem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sN"
                android:textSize="14sp"
                android:padding="20dp"
                android:textColorHint="#cfcfcf"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffffff"
                android:background="@drawable/viewnotesfield"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/add_book_toolbar"
                android:textAllCaps="false"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/edititem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edititem1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/title"
                android:padding="20dp"
                android:textColor="#ffffffff"
                android:textColorHint="#cfcfcf"
                android:background="@drawable/viewnotesfield"
                android:textAllCaps="false"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="14sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/edititem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edititem2"
                android:layout_marginTop="5dp"
                android:hint="@string/author"
                android:padding="20dp"
                android:textColor="#fff"
                android:layout_marginBottom="5dp"
                android:textColorHint="#cfcfcf"
                android:background="@drawable/viewnotesfield"
                android:textAllCaps="false"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="14sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/edititem4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edititem3"
                android:layout_marginTop="5dp"
                android:hint="@string/comment"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffffff"
                android:padding="20dp"
                android:background="@drawable/viewnotesfield"
                android:textSize="14sp"
                android:textColorHint="#cfcfcf"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textAllCaps="false"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

            <EditText
                android:id="@+id/edititem5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edititem4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/content"
                android:textColor="#ffffffff"
                android:background="@drawable/viewnotesfield"
                android:textSize="14sp"
                android:padding="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textAllCaps="false"
                android:textColorHint="#cfcfcf"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

            <Button
                android:id="@+id/editadd_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edititem5"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/ceo_button_design"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:importantForAutofill="no"
                android:text="@string/saveChange"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold"
                tools:targetApi="o" />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>